@@ -29,6 +29,7 @@ lib fost-core
         variant.cpp
         variant-coerce.cpp
         workerqueue.cpp
+        yaml.cpp
     :
         <include>../include
         <target-os>windows:<source>../../External//oleaut
