@@ -1,3 +1,7 @@
+2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
+ Logging
+ - Added a YAML record class for outputting YAML log records.
+
 2010-04-06  Kirit Saelensminde  <kirit@felspar.com>
  Parsers
  - Removed the parser instances because they're not thread safe.
